Modify subheader-outer class z-index from 5 to  99 to prevent elements using the class appearing above modal dialog overlay

--- a/src/components/SubHeader/SubHeader.css
+++ b/src/components/SubHeader/SubHeader.css
@@ -1,11 +1,10 @@
 .subheader-outer {
-  /* overflow-x: hidden; */
   background: #242424;
   display: flex;
   flex-direction: column;
   min-height: 45px;
   margin: 0 0 2px 0;
-  z-index: 99;
+  z-index: 5;
 }
 
 .subheader-inner {
